fix: adjust navbar logo not showing correctly on mobile screens
Authored-by: Jhonatan Martinez

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -223,7 +223,13 @@
 .navbar-light .navbar-brand img {
     max-height: 6rem;
     transition: .5s;
-    width: 22rem;
+    width: 12rem;
+}
+
+@media (min-width: 991px){
+    .navbar-light .navbar-brand img {
+        width: 20rem;
+    }
 }
 
 .sticky-top.navbar-light .navbar-brand img {
